# linkedinsearch

./: pyproject.toml
googlesearch/: __init__.py  data.csv  everthere.json  example.json  info.csv  linkedinSearch.py  update_company_profile.py
tests/: test_googlesearch.py
