[tool.poetry]
name = "googleSearch"
version = "0.1.0"
description = ""
authors = ["Yonatan <yonatan@everthere.co>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
tld = "^0.12.2"
import = "^0.0.1"
tldextract = "^2.2.3"
np = "^1.0.2"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
